<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="8dp"
                app:subtitle="Abdelillah"
                app:subtitleTextAppearance="@style/SubtitleAppearanceToolbar"
                app:subtitleTextColor="#0f0f0f"
                app:title="Good morning,"
                app:titleTextAppearance="@style/TitleAppearanceToolbar"
                app:titleTextColor="#0f0f0f" />


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="inherit"
            android:paddingLeft="4dp"
            android:id="@+id/days"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView"
            tools:listitem="@layout/calendar_item" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/euclid_circular_b_regular"
            android:padding="16dp"
            android:text="@string/tasks_to_do"
            android:textColor="#0f0f0f"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tasks_recyler_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="96dp"
            android:paddingLeft="8dp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/days"
            tools:itemCount="3"
            tools:layout_editor_absoluteX="0dp"
            tools:listitem="@layout/task_item" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_things_to_do"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/euclid_circular_b_light"
            android:gravity="center"
            android:text="@string/no_tasks_to_do_right_now"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tasks_recyler_list"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/euclid_circular_b_regular"
            android:padding="16dp"
            android:text="@string/recent_notes"
            android:textColor="#0f0f0f"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/notes_recycler_list" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes_recycler_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tasks_recyler_list"
            tools:listitem="@layout/note_item" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_notes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/euclid_circular_b_light"
            android:gravity="center"
            android:text="@string/no_note_right_now"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView2" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_float"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/euclid_circular_b_regular"
            android:text="@string/add_note_thing"
            android:textSize="12sp"
            app:icon="@drawable/gradient"
            app:iconSize="16dp"
            app:iconTintMode="screen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:strokeColor="#FFB3FF"
            app:strokeWidth="0.5dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_note_float"
            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/euclid_circular_b_regular"
            android:text="@string/note"
            android:textSize="12sp"
            app:elevation="0dp"
            app:icon="@drawable/ic_note"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="24dp"
            app:iconTint="#FFB3FF"
            app:layout_constraintBottom_toTopOf="@+id/add_float"
            app:layout_constraintEnd_toEndOf="@+id/add_float"
            app:layout_constraintStart_toStartOf="@+id/add_float"
            app:strokeColor="#FFB3FF"
            app:strokeWidth="0.5dp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/add_thing_float"
            style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/euclid_circular_b_regular"
            android:text="@string/tasks"
            android:textSize="12sp"
            app:elevation="0dp"
            app:icon="@drawable/ic_task"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconSize="24dp"
            app:iconTint="#FFB3FF"
            app:layout_constraintBottom_toTopOf="@+id/add_note_float"
            app:layout_constraintEnd_toEndOf="@+id/add_note_float"
            app:layout_constraintStart_toStartOf="@+id/add_note_float"
            app:strokeColor="#FFB3FF"
            app:strokeWidth="0.5dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    <include
        android:id="@+id/standard_sheet"
        layout="@layout/fragment_add_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>