<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.registerorlogin.MainLoginFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_with_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/gradient"
        android:text="@string/login_with_email"
        android:textColor="#0f0f0f"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_with_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/gradient"
        android:text="@string/login_with_facebook"
        android:textColor="#0f0f0f"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/login_with_email"
        app:layout_constraintStart_toStartOf="@+id/login_with_email"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registernewaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/question_register"
        android:textColor="#0F0F0F"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/login_with_facebook"
        app:layout_constraintStart_toStartOf="@+id/login_with_facebook"
        app:layout_constraintTop_toBottomOf="@+id/login_with_facebook" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#0F0F0F"
        app:layout_constraintBottom_toBottomOf="@+id/registernewaccount"
        app:layout_constraintEnd_toEndOf="@+id/registernewaccount"
        app:layout_constraintStart_toStartOf="@+id/registernewaccount"
        app:layout_constraintTop_toBottomOf="@+id/registernewaccount" />
</androidx.constraintlayout.widget.ConstraintLayout>